--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "start": "nodemon --quiet ./backend/server/server.js",
-    "install": "npm i -E express express-validator express-rate-limit express-routes-versioning jose mongodb passport passport-http-bearer bcrypt",
+    "install": "npm i -E express express-validator express-rate-limit express-routes-versioning @types/express jose mongodb passport passport-http-bearer bcrypt",
     "install-dev": "npm i -D nodemon",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.20",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
